# CppSudokuSolver

./: CMakeLists.txt  main.cpp  readme.md
source/: CMakeLists.txt
source/field/: CMakeLists.txt  field.cpp  field.h  subfield.cpp  subfield.h
source/solver/: CMakeLists.txt  solver.cpp  solver.h
tests/: CMakeLists.txt  testsMain.cpp
tests/fields/NotSolvable/: field1.txt
